# tensorrt-slim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
benchmarks/: inception2_jetson_tx2.txt  inception2_titanx.txt  inception_v2b_titanx.txt  mobilenets_jetson_tx2.txt  mobilenets_titanx.txt  nasnet_mobile_awsp3.txt  nasnet_mobile_jetson_tx2.txt  nasnet_mobile_titanx.txt  resnet_50_jetson_tx2.txt  resnet_50_v3_jetson_tx2.txt
data/caffe/: inception_v2.prototxt  inception_v2_1.prototxt  inception_v2_grouped.prototxt  mobilenets.prototxt
data/networks/: inception_v1_fused.tfrt16  inception_v1_fused.tfrt32  inception_v2_fused.tfrt16  inception_v2_fused.tfrt32  seg_inception2_2x2.tfrt16  seg_inception2_2x2.tfrt32  seg_inception2_v0.25.tfrt32  seg_inception2_v0.tfrt16  seg_inception2_v0.tfrt32  seg_inception2_v1.15.tfrt16  seg_inception2_v1.15.tfrt32  seg_inception2_v1.25.tfrt16  seg_inception2_v1.25.tfrt32  seg_inception2_v1l.004.tfrt16  seg_inception2_v1l.004.tfrt32  seg_inception2_v1l.005.tfrt16  seg_inception2_v1l.005.tfrt32  ssd_inception2_v0_orig.tfrt16  ssd_inception2_v0_orig.tfrt32
demos/: CMakeLists.txt
demos/stabilizer/: CMakeLists.txt  single_input_stabilizer.cpp
modules/: CMakeLists.txt
modules/stabilization/: CMakeLists.txt  crop_transform_node.cpp  homography_filter_node.cpp  smoother_node.cpp  stabilizer.cpp  stabilizer.hpp  truncate_transform_node.cpp  vstab_nodes.hpp
nvxio/: CMakeLists.txt  Makefile
nvxio/include/: CMakeLists.txt
nvxio/src/NVX/FrameSource/GStreamer/: GStreamerBaseFrameSourceImpl.cpp
nvxio/src/OVX/Render/: Render3DOVX.cpp  RenderOVX.cpp
python/: export_tfrt_network_weights.py  export_tfrt_ssd_inception2_v0.py  test_checkpoints_pb.ipynb  tfrt_export_weights.py
samples/nvx_video_stabilizer/: Makefile
tensorflowrt/: CMakeLists.txt  imagenet_network.cpp  imagenet_network.h  layers.h  network.cpp  network.h  network.proto  readme.md  scope.h  seg_network.cpp  seg_network.h  ssd_layers.h  ssd_network.cpp  ssd_network.h  ssd_network.proto  tensor.h  tensorflowrt.cpp  tensorflowrt.h  tensorflowrt.proto  tensorflowrt_models.cpp  tensorflowrt_models.h  tensorflowrt_nets.h  tensorflowrt_ssd_models.h  tfrt_jetson.h  types.h  utils.h
tensorflowrt/boxes2d/: boxes2d.cpp  boxes2d.h  operations.h
tensorflowrt/cuda/: cudaCHWImage.cu  cudaCHWImage.h  cudaCHWimage.cu  cudaHalfPrecision.cu  cudaHalfPrecision.h  cudaImageNet.cu  cudaImageNet.h  cudaMappedMemory.h  cudaOverlay.cu  cudaOverlay.h  cudaSegmentation.cu  cudaSegmentation.h  cudaUtility.h
tensorflowrt/layers/: abstract.h  convolutional.h  layers.h  operations.h  pooling.h  unary.h
tensorflowrt/misc/: std_make_unique.h
tensorflowrt/models/: robik_classes.h  seg_inception2_2x2.h  seg_inception2_logits_v1.h  seg_inception2_v0.h  seg_inception2_v1.h  seg_inception2_v1_5x5.h  ssd_inception2_v0.h
tensorflowrt/nets/: inception1.h  inception2.h  inception2_group.h  inception4.h  inception_v1.h  inception_v2b.h  inception_v2c.h  inception_v2d.h  inception_v4.h  inception_v4b.h  mobilenets.h  nasnet.h  nasnet_v1b.h  nasnet_v1c.h  nasnet_v2.h  nets.h  resnet_v1.h  resnet_v3.h  resnext.h
tools/: CMakeLists.txt  tfrt_giexec.cpp
tools/imagenet/: CMakeLists.txt  imagenet_camera.cpp  imagenet_console.cpp
tools/nvx_video_stabilizer/: CMakeLists.txt
tools/samples/: CMakeLists.txt
tools/ssdnet/: CMakeLists.txt  ssdnet_console.cpp
tools/test/: CMakeLists.txt  cuda_tests.cpp  cuda_tests.cu  segnet_tests.cpp  tfrt_benchmark.cpp  tfrt_giexec.cpp
util/: CMakeLists.txt  loadImage.cpp  loadImage.h  tensorflowrt_util.h
util/camera/: gstCamera.cpp
util/cuda/: cudaFont.cu  cudaFont.h
util/display/: glTexture.cpp  glTexture.h
utils/: tfrt_giexec.cpp
